# socca-tune

./: .gitignore  README.md  example.ipynb  pyproject.toml
socca-tune/: initialize.py  period.py  utils.py
socca_tune/: initialize.py
